make text updates to financial aid card

--- a/views/benefits/student_financial_aid-fr.njk
+++ b/views/benefits/student_financial_aid-fr.njk
@@ -4,25 +4,30 @@
     {{__("student_financial_aid.header")}}
   </h2>
 
+  <strong>Hausse des bourses et prêts canadiens d’études<strong>
+
   <ul class="list-none list-outside pl-0">
-    {{ blueLI("Bourses de 6000 $ pour les étudiants à temps plein") }}
-    {{ blueLI("Bourses de 3600 $ pour les étudiants à temps partiel") }}
-    {{ blueLI("Jusquà 140 $ de plus par semaine pour les prêts étudiants") }}
-    {{ blueLI("Élimination des contributions attendues des étudiants et des conjoints d’étudiants") }}
+    {{ blueLI("Jusqu’à 6000 $ en bourses pour les étudiants à temps plein") }}
+    {{ blueLI("Jusqu’à 3600 $ en bourses pour les étudiants à temps partiel") }}
+    {{ blueLI("Doublement des montants des bourses canadiennes pour étudiants qui ont des personnes à charge") }}
+    {{ blueLI("Doublement des montants des bourses canadiennes pour étudiants qui ont une incapacité permanente") }}
+    {{ blueLI("Exemption de la contribution de l’étudiant et de l’époux") }}
+    {{ blueLI("Jusqu’à 350 $ par semaine pour les prêts étudiants") }}
   </ul>
 
   <div class="pb-5 mt-6">
     <strong>Bon à savoir :</strong>
     <ul class='list-outside list-disc'>
-      <li>Le gouvernement doit apporter des modifications à certaines lois afin de rendre cette prestation possible. Cela prendra un peu de temps et pourrait inflencer certains détails de cette prestation.</li>
-      <li>Nous mettrons ces renseignements à jour lorsqu’ils seront connus.</li>
+      <li>Ce programme d’aide sera disponible dès le 1er août 2020.</li>
+      <li>Ce programme est disponible pendnt 1 an.</li>
+      <li>Vous pouvez appliquer dans <a href="https://www.canada.ca/fr/services/prestations/education/aide-etudiants/bourses-prets/province-demande.html" target="_blank">votre province ou territoire de résidence</a>.</li>
     </ul>
 
   </div>
 
   {{ infoLink(
         "student_financial_aid",
-        "https://pm.gc.ca/fr/nouvelles/communiques/2020/04/22/aide-aux-etudiants-et-aux-nouveaux-diplomes-touches-la-covid-19",
-        "Tenez vous informés au sujet de l’aide pour les étudiants"
+        "https://www.canada.ca/fr/services/prestations/education/aide-etudiants/avis-covid-19.html",
+        "En savoir plus à propos de l’aide financière pour étudiants"
     )}}
 </div>
