--- a/views/benefits/student_financial_aid-en.njk
+++ b/views/benefits/student_financial_aid-en.njk
@@ -4,25 +4,30 @@
     {{__("student_financial_aid.header")}}
   </h2>
 
+  <strong>Increasing Canada Student Grants and Loans</strong>
+
   <ul class="list-none list-outside pl-0">
-    {{ blueLI("$6,000 in grants for full-time students") }}
-    {{ blueLI("$3,600 in grants for part-time students") }}
-    {{ blueLI("Up to $140 more for the weekly amount in student loans") }}
-    {{ blueLI("Removing expected contributions from students and spouses for financial aid") }}
+    {{ blueLI("Up to $6,000 in grants for full-time students") }}
+    {{ blueLI("Up to $3,600 in grants for part-time students") }}
+    {{ blueLI("Doubling grants for students with dependants") }}
+    {{ blueLI("Doubling grants for students with permanent disabilities") }}
+    {{ blueLI("Removing expected contributions from students and spouses") }}
+    {{ blueLI("Up to $350 for the weekly amount in student loans") }}
   </ul>
 
   <div class="pb-5 mt-6">
     <strong>Good to know:</strong>
     <ul class='list-outside list-disc'>
-      <li>The government has proposed changes to laws to deliver this new Canada Student Service Grant. That means it has to go to Parliament, which will take time and could change the proposed details.</li>
-      <li>We’ll update this information once the details are known.</li>
+      <li>This financial aid starts August 1, 2020.</li>
+      <li>It’s available for 1 year.</li>
+      <li>You can apply <a href="https://www.canada.ca/en/services/benefits/education/student-aid/grants-loans/province-apply.html" target="_blank">in your province or territory of residence</a>.</li>
     </ul>
 
   </div>
 
   {{ infoLink(
         "student_financial_aid",
-        "https://pm.gc.ca/en/news/news-releases/2020/04/22/support-students-and-new-grads-affected-covid-19",
-        "Read the news release about help for students"
+        "https://www.canada.ca/en/services/benefits/education/student-aid/notice-covid-19.html",
+        "Read more about financial aid for students"
     )}}
 </div>
