update CESB card

--- a/views/benefits/cesb-en.njk
+++ b/views/benefits/cesb-en.njk
@@ -7,23 +7,25 @@
   <ul class="list-none list-outside pl-0">
     {{ blueLI("From May to August 2020") }}
     {{ blueLI("$1,250 per month or") }}
-    {{ blueLI("$1,750 per month if you have dependents or disabilities") }}
+    {{ blueLI("$2,000 per month if you have disabilities or") }}
+    {{ blueLI("$2,000 per month if you have dependants") }}
   </ul>
 
   <div class="pb-5 mt-6">
 
     <strong>The benefit can help if you:</strong>
     <ul class='list-outside list-disc'>
-      <li>Are a student or new graduate who is not eligible for the Canada Emergency Response Benefit (CERB).</li>
-      <li>Earn no more than $1,000 before taxes per month.</li>
+      <li>Are a post-secondary student or recent post-secondary or high school graduate.</li>
+      <li>Are not receiving the Canada Emergency Response Benefit (CERB).</li>
+      <li>Are not able to work or you’re earning no more than $1,000 before taxes per month.</li>
     </ul>
 
     <strong>Good to know:</strong>
     <ul class='list-outside list-disc'>
-      <li>Payments will be retroactive to May 1, 2020.</li>
-      <li>The government has proposed changes to laws to create this program. That means it has to go to Parliament, which will take time and could change the proposed details.</li>
-      <li>The Canada Revenue Agency (CRA) will likely deliver the program.</li>
-      <li>We’ll update this information once the details are known.</li>
+      <li>It will be available for 4 months between May and August 2020.</li>
+      <li>The Canada Revenue Agency (CRA) will deliver the program.</li>
+      <li>You can apply through your MyCRA account, once the benefit is available.</li>
+      <li>More details will be available soon.</li>
     </ul>
 
   </div>
