--- a/views/benefits/cesb-fr.njk
+++ b/views/benefits/cesb-fr.njk
@@ -7,22 +7,24 @@
   <ul class="list-none list-outside pl-0">
     {{ blueLI("De mai à août 2020") }}
     {{ blueLI("1250 $ par mois ou") }}
-    {{ blueLI("1750 $ par mois si vous avez des personnes à charge ou un handicap") }}
+    {{ blueLI("2000 $ par mois si vous avez une incapacité permanente ou") }}
+    {{ blueLI("2000 $ par mois si vous avez des personnes à charge") }}
   </ul>
 
   <div class="pb-5 mt-6">
 
-    <strong>Cette prestation peut vous aider si : </strong>
+    <strong>Cette prestation peut vous aider si :</strong>
     <ul class='list-outside list-disc'>
-      <li>vous êtes étudiant ou récemment diplômé et n’êtes pas admissible à la Prestation canadienne d’urgence.</li>
-      <li>vous ne gagnez pas plus de 1000 $ par mois, avant impôts.</li>
+      <li>vous êtes étudiant au niveau postsecondaire ou récemment diplômé d’un programme postsecondaire.</li>
+      <li>vous ne recevez pas la Prestation canadienne d’urgence.</li>
+      <li>vous ne pouvez pas travailler ou ne gagnez pas plus de 1000 $ par mois, avant impôts.</li>
     </ul>
 
     <strong>Bon à savoir :</strong>
     <ul class='list-outside list-disc'>
-      <li>Les versements seront rétroactifs au 1er mai 2020.</li>
-      <li>Le gouvernement doit apporter des modifications à certaines lois afin de rendre cette prestation possible. Cela prendra un peu de temps et pourrait inflencer certains détails de cette prestation.</li>
+      <li>Ce programme d’aide sera disponible pour 4 mois entre mai et août 2020.</li>
       <li>La prestation sera distribuée par l’Agence du revenu du Canada (ARC).</li>
+      <li>Vous pouvez appliquer via Mon dossier de l’ARC dès que la prestation sera disponible.</li>
       <li>Nous mettrons ces renseignements à jour lorsqu’ils seront connus.</li>
     </ul>
 
