add closing strong tag, not two opening

--- a/views/benefits/student_financial_aid-fr.njk
+++ b/views/benefits/student_financial_aid-fr.njk
@@ -4,7 +4,7 @@
     {{__("student_financial_aid.header")}}
   </h2>
 
-  <strong>Hausse des bourses et prêts canadiens d’études<strong>
+  <strong>Hausse des bourses et prêts canadiens d’études</strong>
 
   <ul class="list-none list-outside pl-0">
     {{ blueLI("Jusqu’à 6000 $ en bourses pour les étudiants à temps plein") }}
