--- a/views/benefits/student_financial_aid-fr.njk
+++ b/views/benefits/student_financial_aid-fr.njk
@@ -19,7 +19,7 @@
     <strong>Bon à savoir :</strong>
     <ul class='list-outside list-disc'>
       <li>Ce programme d’aide sera disponible dès le 1er août 2020.</li>
-      <li>Ce programme est disponible pendnt 1 an.</li>
+      <li>Ce programme est disponible pendant 1 an.</li>
       <li>Vous pouvez appliquer dans <a href="https://www.canada.ca/fr/services/prestations/education/aide-etudiants/bourses-prets/province-demande.html" target="_blank">votre province ou territoire de résidence</a>.</li>
     </ul>
 
