Remove student_2019_20 option from all places And thus, I removed the benefits code (rather than commenting out), since we'll have to go back and dig up code anyways

--- a/routes/question-your-situation-unchanged-income/question-your-situation-unchanged-income.njk
+++ b/routes/question-your-situation-unchanged-income/question-your-situation-unchanged-income.njk
@@ -11,8 +11,7 @@
                 [
                     { value: 'wfh', text:__('your_situation.unchanged_income.1')},
                     { value: 'paid-leave', text:__('your_situation.unchanged_income.2')},
-                    { value: 'retired', text:__('your_situation.unchanged_income.3')},
-                    { value: 'student_2019_20', text:__('your_situation.unchanged_income.4')}
+                    { value: 'retired', text:__('your_situation.unchanged_income.3')}
                 ],
                 data.unchanged_income,
                 __('form.your_situation.unchanged_income'),
