--- a/routes/question-your-situation-no-income/question-your-situation-no-income.njk
+++ b/routes/question-your-situation-no-income/question-your-situation-no-income.njk
@@ -12,8 +12,7 @@
                     { value: 'self-employed-closed', text:__('your_situation.no_income.2')},
                     { value: 'unpaid-leave-to-care', text:__('your_situation.no_income.3')},
                     { value: 'sick-or-quarantined', text:__('your_situation.no_income.4')},
-                    { value: 'parental-recently-cant-return', text:__('your_situation.no_income.5')}
-                    
+                    { value: 'parental-recently-cant-return', text:__('your_situation.no_income.5')},                    
                     { value: 'ei-recently-claim-ended', text:__('your_situation.no_income.7')}
                 ],
                 data.no_income,
