--- a/views/benefits/ei_regular_cerb-fr.njk
+++ b/views/benefits/ei_regular_cerb-fr.njk
@@ -1,4 +1,4 @@
-<div class="m-5 p-5 shadow-result">
+<div class="m-5 p-5 shadow-result" data-cy="ei_regular_cerb-benefit">
 
   <h2 class="text-2xl font-bold mb-6" id="ei_regular_cerb">
     {{__("ei_regular_cerb.header")}}
@@ -11,14 +11,12 @@
   </ul>
 
   <div class="pb-5 mt-6">
-
     <strong>Prochaines étapes :</strong>
     <ul class='list-outside list-disc'>
       <li>Vous devrez répondre à quelques questions afin de déterminer si vous devez présenter la demande auprès de l’agence du revenu du Canada (ARC) ou Services Canada.</li>
       <li>L’application vous demandera de confirmer que vous répondez aux critères d’admissibilité. Lisez attentivement les détails.</li>
       <li>Ces montants sont imposables.</li>
     </ul>
-
   </div>
 
   {{ infoLink(
