--- a/views/benefits/ei_sickness_cerb-en.njk
+++ b/views/benefits/ei_sickness_cerb-en.njk
@@ -1,4 +1,4 @@
-<div class="m-5 p-5 shadow-result">
+<div class="m-5 p-5 shadow-result" data-cy="ei_sickness_cerb-benefit">
 
   <h2 class="text-2xl font-bold mb-6" id="ei_sickness_cerb">
     {{__("ei_sickness_cerb.header")}}
@@ -11,14 +11,12 @@
   </ul>
 
   <div class="pb-5 mt-6">
-
     <strong>Next steps:</strong>
     <ul class='li-disc list-outside'>
       <li>You’ll be asked some questions to direct you to apply through either the Canada Revenue Agency (CRA) or Service Canada.</li>
       <li>The application will ask you to declare that you meet the eligibility criteria, so read the details carefully. </li>
       <li>You’ll need to pay income tax on these payments in the future.</li>
     </ul>
-
   </div>
 
   {{ infoLink(
