--- a/views/benefits/rrif-fr.njk
+++ b/views/benefits/rrif-fr.njk
@@ -1,4 +1,4 @@
-<div class="m-5 p-5 shadow-result">
+<div class="m-5 p-5 shadow-result" data-cy="rrif-benefit">
 
   <h2 class="text-2xl font-bold mb-6" id="rrif">
     {{__("rrif.header")}}
