rename value to not use + character that is illegal when rendered as css id

--- a/routes/question-gross-income/question-gross-income.njk
+++ b/routes/question-gross-income/question-gross-income.njk
@@ -11,7 +11,7 @@
                 'gross_income',
                 [
                     { value: '4999_or_less', text:__('gross_income.1')},
-                    { value: '5k+', text:__('gross_income.2')}
+                    { value: 'over_5k', text:__('gross_income.2')}
                 ],
                 data.gross_income,
                 __('form.gross_income'),
