--- a/views/benefits/student_loan-fr.njk
+++ b/views/benefits/student_loan-fr.njk
@@ -5,7 +5,7 @@
   </h2>
 
   <ul class="list-none list-outside pl-0">
-    {{ blueLI("Les paiements sont automatiquement supspendus") }}
+    {{ blueLI("Les paiements sont automatiquement suspendus") }}
     {{ blueLI("Du 30 mars 2020 jusqu’au 30 septembre 2020") }}
   </ul>
 
