--- a/routes/start/start.njk
+++ b/routes/start/start.njk
@@ -20,7 +20,7 @@
     </div>
 
     <div class="start-button">
-        <a class="font-semibold button-link py-6 px-5 border shadow" data-cy="start" href="{{ routePath(route.next) }}" role="button" draggable="false">
+        <a class="font-semibold button-link py-6 px-5 border shadow" data-cy="start" href="{{ nextRoute }}" role="button" draggable="false">
             {{ __('start.submit') }}
         </a>
     </div>
