Updating button clicks as per Analytics suggestions

--- a/routes/start/start.njk
+++ b/routes/start/start.njk
@@ -17,7 +17,7 @@
     </div>
 
     <div class="start-button">
-        <a class="font-semibold button-link py-6 px-5 border shadow" data-cy="start" href="{{ routePath(route.next) }}" role="button" draggable="false">
+        <a class="font-semibold button-link py-6 px-5 border shadow" data-gc-analytics-customclick="ESDC|EDSC:Covid19 Benefits:Start button click" data-cy="start" href="{{ routePath(route.next) }}" role="button" draggable="false">
             {{ __('start.submit') }}
         </a>
     </div>
