--- a/views/macros/benefit-result.njk
+++ b/views/macros/benefit-result.njk
@@ -11,7 +11,7 @@
 
 {% macro infoLink(id, url, text) %}
   <a href="{{ url }}"
-    data-gc-analytics-customclick="ESDC|EDSC:{{id}}:true"
+    data-gc-analytics-customclick="ESDC|EDSC:Covid19 Benefits:{{id}} button click"
     target="_blank"
     class="full-width font-semibold button-link py-6 px-5 border shadow">
     {{ text }}
