add mention of highschool to cesb fr

--- a/views/benefits/cesb-fr.njk
+++ b/views/benefits/cesb-fr.njk
@@ -15,7 +15,7 @@
 
     <strong>Cette prestation peut vous aider si :</strong>
     <ul class='list-outside list-disc'>
-      <li>vous êtes étudiant au niveau postsecondaire ou récemment diplômé d’un programme postsecondaire.</li>
+      <li>vous êtes étudiant au niveau postsecondaire ou récemment diplômé d’un programme postsecondaire ou secondaire.</li>
       <li>vous ne recevez pas la Prestation canadienne d’urgence.</li>
       <li>vous ne pouvez pas travailler ou ne gagnez pas plus de 1000 $ par mois, avant impôts.</li>
     </ul>
