fix typos in french

--- a/views/benefits/oas-fr.njk
+++ b/views/benefits/oas-fr.njk
@@ -5,7 +5,7 @@
   </h2>
 
   <ul class="list-none list-outside pl-0">
-    {{ blueLI("paiement unique de 300 $, non imposable, si vous recevez la pension de la Sécurité de vieillesse (SV) <br><br> OU paiment unique de 500 $, non imposable, si vous recevez le supplément de revenu garanti (SRG)") }}
+    {{ blueLI("Paiement unique de 300 $, non imposable, si vous recevez la pension de la Sécurité de vieillesse (SV) <br><br> OU paiement unique de 500 $, non imposable, si vous recevez le supplément de revenu garanti (SRG)") }}
     {{ blueLI("Juillet 2020") }}
   </ul>
 
