update english cesb card change single quotes to double in cesb french for consistency

--- a/views/benefits/cesb-fr.njk
+++ b/views/benefits/cesb-fr.njk
@@ -41,7 +41,7 @@
     </ul>
 
     <strong>Bon à savoir :</strong>
-    <ul class='list-outside list-disc'>
+    <ul class="list-outside list-disc">
       <li>Ce programme d’aide sera disponible pour 4 mois entre mai et août 2020.</li>
       <li>Vous pouvez appliquer via Mon dossier de l’ARC dès le 15 mai 2020.</li>
     </ul>
