--- a/views/benefits/cesb-en.njk
+++ b/views/benefits/cesb-en.njk
@@ -30,7 +30,7 @@
 
     <strong>The benefit can help if you are in one of the following situations:</strong>
     <ul class='list-outside list-disc'>
-      <li>Are a post-secondary student or recent post-secondary or high school graduate.</li>
+      <li>Are a post-secondary student or recent post-secondary graduate.</li>
       <li>Are graduating high school in 2020 and have applied to post-secondary education that will start before February 1, 2021.</li>
     </ul>
 
