--- a/routes/question-your-situation-unchanged-income/question-your-situation-unchanged-income.njk
+++ b/routes/question-your-situation-unchanged-income/question-your-situation-unchanged-income.njk
@@ -11,7 +11,9 @@
                 [
                     { value: 'wfh', text:__('your_situation.unchanged_income.1')},
                     { value: 'paid-leave', text:__('your_situation.unchanged_income.2')},
-                    { value: 'retired', text:__('your_situation.unchanged_income.3')}
+                    { value: 'retired', text:__('your_situation.unchanged_income.3')},
+                    { value: 'student_2019_20', text:__('your_situation.unchanged_income.4')},
+                    { value: 'high_school_grad', text:__('your_situation.unchanged_income.5')}
                 ],
                 data.unchanged_income,
                 __('form.your_situation.unchanged_income'),
