--- a/routes/start/start.njk
+++ b/routes/start/start.njk
@@ -9,17 +9,20 @@
         <p>{{ __('start.intro.3') | safe }}</p>
     </div>
 
-    <div>
-        <details>
-            <summary><span>{{ __('start.details.summary') | safe }}</span></summary>
-            <p>{{ __('start.details.p.1') | safe }}</p>
-        </details>
-    </div>
 
     <div class="start-button">
         <a class="font-semibold button-link py-6 px-5 border shadow" data-gc-analytics-customclick="ESDC|EDSC:Covid19 Benefits:Start button click" data-cy="start" href="{{ routePath(route.next) }}" role="button" draggable="false">
             {{ __('start.submit') }}
         </a>
     </div>
+
+    <div>
+    <p>
+      {{ __('start.business') }}
+      <a href="{{ __('start.businesslink.url') }}"
+        target="_blank"
+        data-gc-analytics-customclick="ESDC|EDSC:Covid19 Benefits:businessHelp button click"
+        >{{__('start.businesslink.text')}}</a>
+    </p>
 
 {% endblock %}
