--- a/views/_includes/fip.njk
+++ b/views/_includes/fip.njk
@@ -1,7 +1,7 @@
 <div class="page--container">
     <div class="fip-container">
         <div class="canada-flag">
-            <a href="/" aria-label="{{__('Government of Canada')}}">
+            <a href="{{ __('header.fip-link') }}" aria-label="{{__('Government of Canada')}}">
                 <img src="{{ asset('/img/sig-blk-' + getLocale() + '.svg') }}"
                      alt="{{__('Government of Canada')}}">
             </a>
