--- a/views/base.njk
+++ b/views/base.njk
@@ -13,7 +13,6 @@
         <!-- Required meta tags-->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="[{{ __('app.phase') }}] {{ __('app.title') }}">
         <meta name="csrf-token" content="{{ csrfToken }}">
 
         {% include "_includes/adobe.njk" %}
@@ -24,7 +23,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
         <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Noto+Sans:400,700&amp;display=fallback" rel="stylesheet">
         <link rel="stylesheet" href="{{ asset('/dist/css/styles.css') }}">
-        <title>{% if(title) %}{{ title }} — {% endif %}{{ __('app.title') }}</title>
+        {% include "_includes/meta.njk" %}
         {% include "_includes/ga.njk" %}
     </head>
     <body>
