Update twitter card tag Add alt tag for meta image

--- a/views/_includes/meta.njk
+++ b/views/_includes/meta.njk
@@ -19,10 +19,12 @@
 <meta property="og:title" content="{{ metaTitle }}">
 <meta property="og:description" content="{{ __('app.description') }}">
 <meta property="og:image" content="{{siteUrl}}{{ metaImage }}">
+<meta property="og:image:alt" content="{{ __(app.metaImageAlt) }}">
 
 <!-- Twitter -->
-<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:card" content="summary">
 <meta property="twitter:url" content="{{ siteUrl }}">
 <meta property="twitter:title" content="{{ metaTitle }}">
 <meta property="twitter:description" content="{{ __('app.description') }}">
 <meta property="twitter:image" content="{{siteUrl}}{{ metaImage }}">
+<meta property="twitter:image:alt" content="{{ __(app.metaImageAlt) }}">
