--- a/views/_includes/meta.njk
+++ b/views/_includes/meta.njk
@@ -19,6 +19,8 @@
 <meta property="og:title" content="{{ metaTitle }}">
 <meta property="og:description" content="{{ __('app.description') }}">
 <meta property="og:image" content="{{siteUrl}}{{ metaImage }}">
+<meta property="og:image:width" content="746" />
+<meta property="og:image:height" content="617" />
 <meta property="og:image:alt" content="{{ __('app.metaImageAlt') }}">
 
 <!-- Twitter -->
