--- a/views/_includes/meta.njk
+++ b/views/_includes/meta.njk
@@ -1,7 +1,9 @@
 {% if (title) and (title !== __('app.title')) %}
   {% set metaTitle = title + ' - ' + __('app.title') %}
+  {% set metaUrl =  pageUrl %}
 {% else %}
   {% set metaTitle = title %}
+  {% set metaUrl =  siteUrl %}
 {% endif %}
 
 {% set metaImage = asset('/img/meta-img-' + getLocale() + '.png') %}
@@ -10,12 +12,13 @@
 <title>{{ metaTitle }}</title>
 
 <meta name="title" content="{{ metaTitle }}">
-
 <meta name="description" content="{{ __('app.description') }}">
+
+<link rel="canonical" href="{{ siteUrl }}">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
-<meta property="og:url" content="{{ siteUrl }}">
+<meta property="og:url" content="{{ metaUrl }}">
 <meta property="og:title" content="{{ metaTitle }}">
 <meta property="og:description" content="{{ __('app.description') }}">
 <meta property="og:image" content="{{siteUrl}}{{ metaImage }}">
@@ -25,7 +28,7 @@
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary">
-<meta property="twitter:url" content="{{ siteUrl }}">
+<meta property="twitter:url" content="{{ metaUrl }}">
 <meta property="twitter:title" content="{{ metaTitle }}">
 <meta property="twitter:description" content="{{ __('app.description') }}">
 <meta property="twitter:image" content="{{siteUrl}}{{ metaImage }}">
