correct canonical url

--- a/views/_includes/meta.njk
+++ b/views/_includes/meta.njk
@@ -14,7 +14,7 @@
 <meta name="title" content="{{ metaTitle }}">
 <meta name="description" content="{{ __('app.description') }}">
 
-<link rel="canonical" href="{{ siteUrl }}">
+<link rel="canonical" href="{{ metaUrl }}">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
