--- a/views/_includes/meta.njk
+++ b/views/_includes/meta.njk
@@ -19,7 +19,7 @@
 <meta property="og:url" content="{{ pageUrl }}">
 <meta property="og:title" content="{{ metaTitle }}">
 <meta property="og:description" content="{{ __('app.description') }}">
-<meta property="og:image" content="{{siteUrl}}{{ metaImage }}">
+<meta property="og:image" content="{{ metaImage }}">
 <meta property="og:image:width" content="746" />
 <meta property="og:image:height" content="617" />
 <meta property="og:image:alt" content="{{ __('app.metaImageAlt') }}">
@@ -29,5 +29,5 @@
 <meta property="twitter:url" content="{{ pageUrl }}">
 <meta property="twitter:title" content="{{ metaTitle }}">
 <meta property="twitter:description" content="{{ __('app.description') }}">
-<meta property="twitter:image" content="{{siteUrl}}{{ metaImage }}">
+<meta property="twitter:image" content="{{ metaImage }}">
 <meta property="twitter:image:alt" content="{{ __('app.metaImageAlt') }}">
