--- a/views/benefits/province-ab-fr.njk
+++ b/views/benefits/province-ab-fr.njk
@@ -1,7 +1,7 @@
 <div class="m-5 p-5 shadow-result">
 
   <h2 class="text-2xl font-bold mb-6" id="province-ab">
-    {{__("province.ab.header")}}
+    {{__("province-ab.header")}}
   </h2>
 
   <div class="pb-5 mt-6">
