open link in new tab

--- a/views/benefits/province-on-en.njk
+++ b/views/benefits/province-on-en.njk
@@ -10,7 +10,7 @@
 
     <strong>Good to know:</strong>
     <ul class='list-outside list-disc'>
-      <li>Information for <a href="https://www.ontario.ca/page/covid-19-support-workers">health care workers and others who are working in Ontario</a>.</li>
+      <li>Information for <a href="https://www.ontario.ca/page/covid-19-support-workers" target="_blank">health care workers and others who are working in Ontario</a>.</li>
     </ul>
   </div>
 
