--- a/views/benefits/province-on-fr.njk
+++ b/views/benefits/province-on-fr.njk
@@ -10,7 +10,7 @@
 
     <strong>Bon à savoir :</strong>
     <ul class='list-outside list-disc'>
-      <li>Information pour <a href="https://www.ontario.ca/fr/page/covid-19-soutien-aux-travailleurs">les travailleurs de la santé et les autres personnes en service en Ontario</a>.</li>
+      <li>Information pour <a href="https://www.ontario.ca/fr/page/covid-19-soutien-aux-travailleurs" target="_blank">les travailleurs de la santé et les autres personnes en service en Ontario</a>.</li>
     </ul>
   </div>
 
