--- a/routes/start/start.njk
+++ b/routes/start/start.njk
@@ -6,7 +6,8 @@
 
     <div>
         <p class="mb-8">{{ __('start.intro.2') | safe }}</p>
-        <p>{{ __('start.intro.3') | safe }}</p>
+        <h2 class="text-2xl">{{ __('start.subheader') }}</h2>
+        <p>{{ __('start.intro.3') }}</p>
     </div>
 
 
