Humble beginnings for the new results page changed the markup accordingly in CESB (minus some needed SVGS) setup a blank js file for the accordions with some todos

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -15,6 +15,7 @@
 @import './components/_multiple-choice';
 @import './components/_banners';
 @import './components/_breakdown-table';
+@import './components/_benefits';
 @import './components/_phase-banner';
 @import './components/_input-file';
 @import './components/skip-link';
