--- a/views/benefits/cssg-en.njk
+++ b/views/benefits/cssg-en.njk
@@ -1,11 +1,11 @@
-<div class="m-5 p-5 shadow-result">
+<div class="m-5 p-5 benefit">
 
-  <h2 class="text-2xl font-bold mb-6" id="cssg">
+   <h2 class="benefit__header -mx-5 -mt-5 pl-5  text-2xl mb-6 p-4" id="cssg">
     {{__("cssg.header")}}
   </h2>
 
   <ul class="list-none list-outside pl-0">
-    {{ blueLI("Up to $5,000 towards school in the fall") }}
+    {{ benefitLi("Up to $5,000 towards school in the fall") }}
   </ul>
 
   <div class="pb-5 mt-6">
