--- a/views/benefits/ccb_payment-fr.njk
+++ b/views/benefits/ccb_payment-fr.njk
@@ -1,12 +1,12 @@
-<div class="m-5 p-5 shadow-result">
+<div class="m-5 p-5 benefit">
 
-  <h2 class="text-2xl font-bold mb-6" id="ccb_payment">
+   <h2 class="benefit__header -mx-5 -mt-5 pl-5  text-2xl mb-6 p-4" id="ccb_payment">
     {{__("ccb_payment.header")}}
   </h2>
 
   <ul class="list-none list-outside pl-0">
-    {{ blueLI("Versement automatique au mois de mai ") }}
-    {{ blueLI("300 $ par enfant ") }}
+    {{ benefitLi("Versement automatique au mois de mai ") }}
+    {{ benefitLi("300 $ par enfant ") }}
   </ul>
 
   <div class="pb-5 mt-6">
