--- a/views/benefits/cesb-en.njk
+++ b/views/benefits/cesb-en.njk
@@ -1,56 +1,64 @@
-<div class="m-5 p-5 shadow-result">
+<div class="m-5 p-5 benefit">
 
-  <h2 class="text-2xl font-bold mb-6" id="cesb">
+   <h2 class="benefit__header -mx-5 -mt-5 pl-5  text-2xl mb-6 p-4" id="cesb">
     {{__("cesb.header")}}
   </h2>
 
-  <ul class="list-none list-outside pl-0">
-    {{ blueLI("From May to August 2020") }}
-    <li>
-      <div class="bg-blue-200 p-5 m-1 text-blue-800">
-        <p class="relative m-0 pl-8 ">
-          <img src="{{ asset('/img/check-circle.svg') }}" class="w-6 h-6 mt-1 -ml-8 absolute fill-current" alt="">
-          <ul class='list-none  mt-2'>
-            <li>
-              <strong>$1,250 per month</strong>
-            </li>
-            <li>
-              <strong>OR $2,000 per month if you have disabilities</strong>
-            </li>
-            <li>
-              <strong>OR $2,000 per month if you have dependants</strong>
-            </li>
-          </ul>
-        </p>
-      </div>
-    </li>
-  </ul>
+  {% if unavailableBenefit %}
+  <button id="benefitInfoButtonCESB" aria-controls="benefitInfoCESB" aria-expanded="false">More Info</button>
 
-  <div class="pb-5 mt-6">
-
-    <strong>The benefit can help if you are in one of the following situations:</strong>
-    <ul class='list-outside list-disc'>
-      <li>Are a post-secondary student or recent post-secondary graduate.</li>
-      <li>Are graduating high school in 2020 and have applied to post-secondary education that will start before February 1, 2021.</li>
+  <div id="benefitInfoCESB" aria-labelledby="benefitInfoButtonCESB" tabindex="-1">
+  {% endif %}
+    <ul class="list-none list-outside pl-0">
+      {{ benefitLi("From May to August 2020") }}
+      <li>
+        <div class="p-5 m-1">
+          <p class="relative m-0 pl-8 ">
+            <img src="{{ asset('/img/check-circle.svg') }}" class="w-6 h-6 mt-1 -ml-8 absolute fill-current" alt="">
+            <ul class='list-none  mt-2'>
+              <li>
+                <strong>$1,250 per month</strong>
+              </li>
+              <li>
+                <strong>OR $2,000 per month if you have disabilities</strong>
+              </li>
+              <li>
+                <strong>OR $2,000 per month if you have dependants</strong>
+              </li>
+            </ul>
+          </p>
+        </div>
+      </li>
     </ul>
 
-    <strong>And you:</strong>
-    <ul class='list-outside list-disc'>
-      <li>Are not receiving the Canada Emergency Response Benefit (CERB).</li>
-      <li>Are not able to work or you’re earning no more than $1,000 before taxes per month.</li>
-    </ul>
+    <div class="pb-5 mt-6">
 
-    <strong>Good to know:</strong>
-    <ul class='list-outside list-disc'>
-      <li>It will be available for 4 months between May and August 2020.</li>
-      <li>You can apply through your MyCRA account starting May 15, 2020.</li>
-    </ul>
+      <strong>The benefit can help if you are in one of the following situations:</strong>
+      <ul class='list-outside list-disc'>
+        <li>Are a post-secondary student or recent post-secondary graduate.</li>
+        <li>Are graduating high school in 2020 and have applied to post-secondary education that will start before February 1, 2021.</li>
+      </ul>
 
+      <strong>And you:</strong>
+      <ul class='list-outside list-disc'>
+        <li>Are not receiving the Canada Emergency Response Benefit (CERB).</li>
+        <li>Are not able to work or you’re earning no more than $1,000 before taxes per month.</li>
+      </ul>
+
+      <strong>Good to know:</strong>
+      <ul class='list-outside list-disc'>
+        <li>It will be available for 4 months between May and August 2020.</li>
+        <li>You can apply through your MyCRA account starting May 15, 2020.</li>
+      </ul>
+
+    </div>
+
+    {{ infoLink(
+          "cesb",
+          "https://www.canada.ca/en/revenue-agency/services/benefits/emergency-student-benefit/cesb-who-apply.html",
+          "Check your eligibility for CESB"
+      )}}
+  {% if unavailableBenefit %}
   </div>
-
-  {{ infoLink(
-        "cesb",
-        "https://www.canada.ca/en/revenue-agency/services/benefits/emergency-student-benefit/cesb-who-apply.html",
-        "Check your eligibility for CESB"
-    )}}
+  {% endif %}
 </div>
