--- a/views/benefits/cesb-fr.njk
+++ b/views/benefits/cesb-fr.njk
@@ -1,13 +1,13 @@
-<div class="m-5 p-5 shadow-result">
+<div class="m-5 p-5 benefit">
 
-  <h2 class="text-2xl font-bold mb-6" id="cesb">
+   <h2 class="benefit__header -mx-5 -mt-5 pl-5  text-2xl mb-6 p-4" id="cesb">
     {{__("cesb.header")}}
   </h2>
 
   <ul class="list-none list-outside pl-0">
-    {{ blueLI("De mai à août 2020") }}
+    {{ benefitLi("De mai à août 2020") }}
     <li>
-      <div class="bg-blue-200 p-5 m-1 text-blue-800">
+      <div class="p-5 m-1">
         <p class="relative m-0 pl-8 ">
           <img src="{{ asset('/img/check-circle.svg') }}" class="w-6 h-6 mt-1 -ml-8 absolute fill-current" alt="">
           <ul class='list-none  mt-2'>
