--- a/views/benefits/ei_regular_cerb-fr.njk
+++ b/views/benefits/ei_regular_cerb-fr.njk
@@ -1,13 +1,13 @@
-<div class="m-5 p-5 shadow-result" data-cy="ei_regular_cerb-benefit">
+<div class="m-5 p-5 benefit" data-cy="ei_regular_cerb-benefit">
 
-  <h2 class="text-2xl font-bold mb-6" id="ei_regular_cerb">
+   <h2 class="benefit__header -mx-5 -mt-5 pl-5  text-2xl mb-6 p-4" id="ei_regular_cerb">
     {{__("ei_regular_cerb.header")}}
   </h2>
 
   <ul class="list-none list-outside pl-0">
-    {{ blueLI("500 $ par semaine") }}
-    {{ blueLI("Jusqu’à 16 semaines", "tant que vous répondez aux critères d’admissibilité") }}
-    {{ blueLI("À recevoir au plus tard 10 jours après la demande") }}
+    {{ benefitLi("500 $ par semaine") }}
+    {{ benefitLi("Jusqu’à 16 semaines", "tant que vous répondez aux critères d’admissibilité") }}
+    {{ benefitLi("À recevoir au plus tard 10 jours après la demande") }}
   </ul>
 
   <div class="pb-5 mt-6">
