--- a/views/benefits/ei_workshare-fr.njk
+++ b/views/benefits/ei_workshare-fr.njk
@@ -1,12 +1,12 @@
-<div class="m-5 p-5 shadow-result">
+<div class="m-5 p-5 benefit">
 
-  <h2 class="text-2xl font-bold mb-6" id="ei_workshare">
+   <h2 class="benefit__header -mx-5 -mt-5 pl-5  text-2xl mb-6 p-4" id="ei_workshare">
     {{__("ei_workshare.header")}}
   </h2>
 
   <ul class="list-none list-outside pl-0">
-    {{ blueLI("Recevoir des prestations d’assurance-emploi") }}
-    {{ blueLI("Pendant 76 semaines maximum") }}
+    {{ benefitLi("Recevoir des prestations d’assurance-emploi") }}
+    {{ benefitLi("Pendant 76 semaines maximum") }}
   </ul>
 
   <div class="pb-5 mt-6">
