--- a/views/benefits/gst_credit-en.njk
+++ b/views/benefits/gst_credit-en.njk
@@ -1,13 +1,13 @@
-<div class="m-5 p-5 shadow-result">
-  <h3 class="text-2xl font-bold mb-6" id="gst_credit">
+<div class="m-5 p-5 benefit">
+  <h3 class="benefit__header -mx-5 -mt-5 pl-5  text-2xl mb-6 p-4" id="gst_credit">
     {{ __("gst_credit.header") }}
   </h3>
 
   <ul class="list-none list-outside pl-0">
-    {{ blueLI("Automatic payment in April if you already receive the GST credit") }}
+    {{ benefitLi("Automatic payment in April if you already receive the GST credit") }}
 
     <li>
-      <div class="bg-blue-200 p-5 m-1 text-blue-800">
+      <div class="p-5 m-1">
         <p class="relative m-0 pl-8 ">
           <img src="{{ asset('/img/check-circle.svg') }}" class="w-6 h-6 mt-1 -ml-8 absolute fill-current" alt="">
           <strong>On average:</strong>
@@ -22,7 +22,7 @@
         </p>
       </div>
     </li>
-    {{ blueLI("Amount depends on your 2018 income taxes") }}
+    {{ benefitLi("Amount depends on your 2018 income taxes") }}
   </ul>
 
   <div class="pb-5 mt-6">
