--- a/views/benefits/gst_credit-fr.njk
+++ b/views/benefits/gst_credit-fr.njk
@@ -1,13 +1,13 @@
-<div class="m-5 p-5 shadow-result">
+<div class="m-5 p-5 benefit">
 
-  <h2 class="text-2xl font-bold mb-6" id="gst_credit">
+   <h3 class="benefit__header -mx-5 -mt-5 pl-5  text-2xl mb-6 p-4" id="gst_credit">
     {{ __("gst_credit.header") }}
-  </h2>
+  </h3>
 
   <ul class="list-none list-outside pl-0">
-    {{ blueLI("Versement automatique au mois d’avril si vous recevez déjà le crédit pour la TPS") }}
-    {{ blueLI("En moyenne :<br> 400 $ pour les célibataires<br>600 $ pour les couples") }}
-    {{ blueLI("Le montant du crédit dépend de votre revenu pour l’année imposable 2018") }}
+    {{ benefitLi("Versement automatique au mois d’avril si vous recevez déjà le crédit pour la TPS") }}
+    {{ benefitLi("En moyenne :<br> 400 $ pour les célibataires<br>600 $ pour les couples") }}
+    {{ benefitLi("Le montant du crédit dépend de votre revenu pour l’année imposable 2018") }}
   </ul>
 
   <div class="pb-5 mt-6">
