--- a/views/benefits/mortgage_deferral-en.njk
+++ b/views/benefits/mortgage_deferral-en.njk
@@ -1,11 +1,11 @@
-<div class="m-5 p-5 shadow-result">
+<div class="m-5 p-5 benefit">
 
-  <h2 class="text-2xl font-bold mb-6" id="mortgage_deferral">
+   <h2 class="benefit__header -mx-5 -mt-5 pl-5  text-2xl mb-6 p-4" id="mortgage_deferral">
     {{__("mortgage_deferral.header")}}
   </h2>
 
   <ul class="list-none list-outside pl-0">
-    {{ blueLI("Skip mortgage payments until you’re able to pay again") }}
+    {{ benefitLi("Skip mortgage payments until you’re able to pay again") }}
   </ul>
 
   <div class="pb-5 mt-6">
