--- a/views/benefits/oas-en.njk
+++ b/views/benefits/oas-en.njk
@@ -1,12 +1,12 @@
-<div class="m-5 p-5 shadow-result">
+<div class="m-5 p-5 benefit">
 
-  <h2 class="text-2xl font-bold mb-6" id="oas">
+   <h2 class="benefit__header -mx-5 -mt-5 pl-5  text-2xl mb-6 p-4" id="oas">
     {{__("oas.header")}}
   </h2>
 
   <ul class="list-none list-outside pl-0">
-    {{ blueLI("$300 one-time, tax-free payment if you are enrolled in the Old Age Security (OAS) pension <br><br> OR $500 one-time, tax-free payment if you receive the Guaranteed Income Supplement (GIS)") }}
-    {{ blueLI("July 2020") }}
+    {{ benefitLi("$300 one-time, tax-free payment if you are enrolled in the Old Age Security (OAS) pension <br><br> OR $500 one-time, tax-free payment if you receive the Guaranteed Income Supplement (GIS)") }}
+    {{ benefitLi("July 2020") }}
   </ul>
 
   <div class="pb-5 mt-6">
