--- a/views/benefits/oas-fr.njk
+++ b/views/benefits/oas-fr.njk
@@ -1,12 +1,12 @@
-<div class="m-5 p-5 shadow-result">
+<div class="m-5 p-5 benefit">
 
-  <h2 class="text-2xl font-bold mb-6" id="oas">
+   <h2 class="benefit__header -mx-5 -mt-5 pl-5  text-2xl mb-6 p-4" id="oas">
     {{__("oas.header")}}
   </h2>
 
   <ul class="list-none list-outside pl-0">
-    {{ blueLI("Paiement unique de 300 $, non imposable, si vous recevez la pension de la Sécurité de vieillesse (SV) <br><br> OU paiement unique de 500 $, non imposable, si vous recevez le supplément de revenu garanti (SRG)") }}
-    {{ blueLI("Juillet 2020") }}
+    {{ benefitLi("Paiement unique de 300 $, non imposable, si vous recevez la pension de la Sécurité de vieillesse (SV) <br><br> OU paiement unique de 500 $, non imposable, si vous recevez le supplément de revenu garanti (SRG)") }}
+    {{ benefitLi("Juillet 2020") }}
   </ul>
 
   <div class="pb-5 mt-6">
