--- a/views/benefits/province-pe-fr.njk
+++ b/views/benefits/province-pe-fr.njk
@@ -1,6 +1,6 @@
-<div class="m-5 p-5 shadow-result">
+<div class="m-5 p-5 benefit">
 
-  <h2 class="text-2xl font-bold mb-6" id="province-pe">
+   <h2 class="benefit__header -mx-5 -mt-5 pl-5  text-2xl mb-6 p-4" id="province-pe">
     {{__("province-pe.header")}}
   </h2>
 
