--- a/views/benefits/student_financial_aid-en.njk
+++ b/views/benefits/student_financial_aid-en.njk
@@ -1,18 +1,18 @@
-<div class="m-5 p-5 shadow-result">
+<div class="m-5 p-5 benefit">
 
-  <h2 class="text-2xl font-bold mb-6" id="student_financial_aid">
+   <h2 class="benefit__header -mx-5 -mt-5 pl-5  text-2xl mb-6 p-4" id="student_financial_aid">
     {{__("student_financial_aid.header")}}
   </h2>
 
   <strong>Increasing Canada Student Grants and Loans</strong>
 
   <ul class="list-none list-outside pl-0">
-    {{ blueLI("Up to $6,000 in grants for full-time students") }}
-    {{ blueLI("Up to $3,600 in grants for part-time students") }}
-    {{ blueLI("Doubling grants for students with dependants") }}
-    {{ blueLI("Doubling grants for students with permanent disabilities") }}
-    {{ blueLI("Removing expected contributions from students and spouses") }}
-    {{ blueLI("Up to $350 for the weekly amount in student loans") }}
+    {{ benefitLi("Up to $6,000 in grants for full-time students") }}
+    {{ benefitLi("Up to $3,600 in grants for part-time students") }}
+    {{ benefitLi("Doubling grants for students with dependants") }}
+    {{ benefitLi("Doubling grants for students with permanent disabilities") }}
+    {{ benefitLi("Removing expected contributions from students and spouses") }}
+    {{ benefitLi("Up to $350 for the weekly amount in student loans") }}
   </ul>
 
   <div class="pb-5 mt-6">
