--- a/views/benefits/student_financial_aid-fr.njk
+++ b/views/benefits/student_financial_aid-fr.njk
@@ -1,18 +1,18 @@
-<div class="m-5 p-5 shadow-result">
+<div class="m-5 p-5 benefit">
 
-  <h2 class="text-2xl font-bold mb-6" id="student_financial_aid">
+   <h2 class="benefit__header -mx-5 -mt-5 pl-5  text-2xl mb-6 p-4" id="student_financial_aid">
     {{__("student_financial_aid.header")}}
   </h2>
 
   <strong>Hausse des bourses et prêts canadiens d’études</strong>
 
   <ul class="list-none list-outside pl-0">
-    {{ blueLI("Jusqu’à 6000 $ en bourses pour les étudiants à temps plein") }}
-    {{ blueLI("Jusqu’à 3600 $ en bourses pour les étudiants à temps partiel") }}
-    {{ blueLI("Doublement des montants des bourses canadiennes pour étudiants qui ont des personnes à charge") }}
-    {{ blueLI("Doublement des montants des bourses canadiennes pour étudiants qui ont une incapacité permanente") }}
-    {{ blueLI("Exemption de la contribution de l’étudiant et de l’époux") }}
-    {{ blueLI("Jusqu’à 350 $ par semaine pour les prêts étudiants") }}
+    {{ benefitLi("Jusqu’à 6000 $ en bourses pour les étudiants à temps plein") }}
+    {{ benefitLi("Jusqu’à 3600 $ en bourses pour les étudiants à temps partiel") }}
+    {{ benefitLi("Doublement des montants des bourses canadiennes pour étudiants qui ont des personnes à charge") }}
+    {{ benefitLi("Doublement des montants des bourses canadiennes pour étudiants qui ont une incapacité permanente") }}
+    {{ benefitLi("Exemption de la contribution de l’étudiant et de l’époux") }}
+    {{ benefitLi("Jusqu’à 350 $ par semaine pour les prêts étudiants") }}
   </ul>
 
   <div class="pb-5 mt-6">
