--- a/views/benefits/student_loan-en.njk
+++ b/views/benefits/student_loan-en.njk
@@ -1,12 +1,12 @@
-<div class="m-5 p-5 shadow-result">
+<div class="m-5 p-5 benefit">
 
-  <h2 class="text-2xl font-bold mb-6" id="student_loan">
+   <h2 class="benefit__header -mx-5 -mt-5 pl-5  text-2xl mb-6 p-4" id="student_loan">
     {{__("student_loan.header")}}
   </h2>
 
   <ul class="list-none list-outside pl-0">
-    {{ blueLI("Payments automatically paused") }}
-    {{ blueLI("From March 30, 2020 until September 30, 2020") }}
+    {{ benefitLi("Payments automatically paused") }}
+    {{ benefitLi("From March 30, 2020 until September 30, 2020") }}
   </ul>
 
   <div class="pb-5 mt-6">
