update OAS benefit cards

--- a/views/benefits/oas-en.njk
+++ b/views/benefits/oas-en.njk
@@ -5,14 +5,20 @@
   </h2>
 
   <ul class="list-none list-outside pl-0">
-    {{ blueLI("$300 one-time, tax-free payment if you are enrolled in the Old Age Security (OAS) pension <br><br> OR $500 one-time, tax-free payment if you receive the Guaranteed Income Supplement (GIS)") }}
-    {{ blueLI("July 2020") }}
+    {{ blueLI("$300 one-time, tax-free payment if you are eligible for the Old Age Security (OAS) pension
+        <br><br> 
+        OR $500 one-time, tax-free payment if you receive the Guaranteed Income Supplement (GIS) 
+        <br><br> 
+        OR $500 one-time, tax-free payment if you receive the Allowance or the Allowance for the Survivor") }}
+    {{ blueLI("Payments will be sent as soon as possible") }}
   </ul>
 
   <div class="pb-5 mt-6">
 
     <strong>Good to know:</strong>
     <ul class='list-disc list-outside'>
+      <li>You’ll receive this payment if you are eligible to receive OAS or its related benefits in June 2020.</li>
+      <li>You become eligible for OAS the month after you turn 65. So if you turn 65 in June, you will not receive this one-time payment.</li>
       <li>Payments will be sent automatically. You don’t need to do anything to receive it.</li>
     </ul>
 
@@ -20,7 +26,7 @@
 
   {{ infoLink(
         "oas",
-        "https://pm.gc.ca/en/news/news-releases/2020/05/12/prime-minister-announces-additional-support-canadian-seniors",
-        "Read the news release about help for seniors"
+        "https://www.canada.ca/en/services/benefits/publicpensions/notice-covid-19/one-time-payment.html",
+        "Learn more about help for seniors"
     )}}
 </div>
