--- a/assets/scss/components/_benefits.scss
+++ b/assets/scss/components/_benefits.scss
@@ -1,33 +1,34 @@
 .benefits {
+  @apply  -mx-5 mt-10 bg-green-100;
   &__header {
+    @apply mb-6 p-4 flex items-center;
+
     color: $color-green;
-    display: flex;
-    align-items: center;
 
     svg {
-      margin-right: $space-sm;
+      @apply mr-4;
     }
   }
 
   .benefit {
-    background: $color-white; 
-    border-left: 4px solid $color-green;
+    @apply mt-5 p-5 bg-white border-l-4;
+    border-color: $color-green;
 
     &__header {
       background: $color-green;
-      color: $color-white; 
-      font-weight: 400;
+      @apply text-white font-normal;
     }
   }
 }
 
 .benefits--other {
   .benefits__header {
+    @apply p-4;
     color: $color-blue-light;
   }
 
   .benefit {
-    border-left: 4px solid $color-blue-light;
+    border-color: $color-blue-light;
 
     &__header {
       background: $color-blue-light;
@@ -36,11 +37,12 @@
 }
 .benefits--unavailable {
   .benefits__header {
+    @apply p-4;
     color: $color-red;
   }
 
   .benefit {
-    border-left: 4px solid $color-red;
+    border-color: $color-red;
 
     &__header {
       background: $color-red;
