--- a/routes/results/results.njk
+++ b/routes/results/results.njk
@@ -30,15 +30,15 @@
         <p>{{ __('results.situation_changes') }}</p>
     {% endif %}
 
-    <div data-cy="benefit-list" class="mt-10 bg-green-100 benefits benefits--available">
+    <div data-cy="benefit-list" class="benefits benefits--available">
         {% if benefits.length > 0 %}
-            <div class="benefits__header mb-6">
+            <div class="benefits__header">
                 <svg class="benefits__svg" width="32" height="24" viewBox="0 0 32 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M10.875 23.4375C11.125 23.8125 11.5 23.9375 12 23.9375C12.4375 23.9375 12.8125 23.8125 13.125 23.4375L31.5625 5.0625C31.8125 4.8125 32 4.4375 32 3.9375C32 3.5 31.8125 3.125 31.5625 2.8125L29.25 0.5625C28.9375 0.25 28.5625 0.0625 28.125 0.0625C27.6875 0.0625 27.3125 0.25 27 0.5625L12 15.5625L5 8.5625C4.625 8.25 4.25 8.0625 3.8125 8.0625C3.375 8.0625 3 8.25 2.75 8.5625L0.4375 10.8125C0.125 11.125 0 11.5 0 11.9375C0 12.4375 0.125 12.8125 0.4375 13.0625L10.875 23.4375Z" fill="#138A00"/>
                 </svg>
-                <h2 class="text-3xl font-bold m-0">{{benefits.length}} {{ __('results.results') }}</h2>
+                <h2 class="text-3xl font-bold m-0">{{ __n('results_title', benefits.length) }}</h2>
             </div>
-            <p>{{ __("results.header_text") }}</p>
+            <p class="px-4">{{ __("results.header_text") }}</p>
         {% endif %}
         {% for benefit in benefits %}
             {% include "benefits/" + benefit + "-" + getLocale() +  ".njk" %}
@@ -55,7 +55,7 @@
             </h2>
         </div>
 
-        <p>{{ __('results.other_potential_help.preamble') }}</p>
+        <p class="px-4">{{ __('results.other_potential_help.preamble') }}</p>
 
         <div data-cy="other-benefits-list" class="mt-10">
             {% if provincial %}
@@ -74,7 +74,7 @@
                 {{ __('results.other_potential_help') }}
             </h2>
         </div>
-        <button id="unavailableBenefitsButton" aria-controls="unavailableBenefitsList" aria-expanded="false">View list of benefits not relevant for you</button>
+        <button id="unavailableBenefitsButton" aria-controls="unavailableBenefitsList" aria-expanded="false" class="px-4">View list of benefits not relevant for you</button>
         <div class="benefits__list" id="unavailableBenefitsList" aria-labelledby="unavailableBenefitsButton" tabindex="-1">
             {% set unavailableBenefit = true %}
             {% for benefit in unavailableBenefits %}
