--- a/views/benefits/ei_regular_cerb-fr.njk
+++ b/views/benefits/ei_regular_cerb-fr.njk
@@ -1,4 +1,4 @@
-<div class="m-5 p-5 benefit" data-cy="ei_regular_cerb-benefit">
+<div class="benefit" data-cy="ei_regular_cerb-benefit">
 
    <h2 class="benefit__header -mx-5 -mt-5 pl-5  text-2xl mb-6 p-4" id="ei_regular_cerb">
     {{__("ei_regular_cerb.header")}}
