--- a/views/benefits/province-ab-fr.njk
+++ b/views/benefits/province-ab-fr.njk
@@ -1,4 +1,4 @@
-<div class="m-5 p-5 benefit">
+<div class="benefit">
 
    <h2 class="benefit__header -mx-5 -mt-5 pl-5  text-2xl mb-6 p-4" id="province-ab">
     {{__("province-ab.header")}}
