move more tailwind styles out using @apply

--- a/assets/scss/components/_benefits.scss
+++ b/assets/scss/components/_benefits.scss
@@ -16,7 +16,7 @@
 
     &__header {
       background: $color-green;
-      @apply text-white font-normal;
+      @apply text-white font-normal -mx-5 -mt-5 pl-5  text-2xl mb-6 p-4;
     }
   }
 }
