--- a/views/benefits/cerb-en.njk
+++ b/views/benefits/cerb-en.njk
@@ -1,6 +1,6 @@
 <div class="p-5 benefit" data-cy="cerb-benefit">
 
-   <h2 class="benefit__header -mx-5 -mt-5 pl-5  text-2xl mb-6 p-4" id="cerb">
+   <h2 class="benefit__header" id="cerb">
     {{__("cerb.header")}}
   </h2>
 
