--- a/views/benefits/gst_credit-fr.njk
+++ b/views/benefits/gst_credit-fr.njk
@@ -1,6 +1,6 @@
 <div class="benefit">
 
-   <h3 class="benefit__header -mx-5 -mt-5 pl-5  text-2xl mb-6 p-4" id="gst_credit">
+   <h3 class="benefit__header" id="gst_credit">
     {{ __("gst_credit.header") }}
   </h3>
 
