--- a/views/benefits/ccb_payment-en.njk
+++ b/views/benefits/ccb_payment-en.njk
@@ -1,6 +1,6 @@
 <div class="benefit">
 
-   <h2 class="benefit__header -mx-5 -mt-5 pl-5  text-2xl mb-6 p-4" id="ccb_payment">
+   <h2 class="benefit__header" id="ccb_payment">
     {{__("ccb_payment.header")}}
   </h2>
 
