--- a/views/benefits/cssg-fr.njk
+++ b/views/benefits/cssg-fr.njk
@@ -1,6 +1,6 @@
 <div class="benefit">
 
-   <h2 class="benefit__header -mx-5 -mt-5 pl-5  text-2xl mb-6 p-4" id="cssg">
+   <h2 class="benefit__header" id="cssg">
     {{__("cssg.header")}}
   </h2>
 
