--- a/views/benefits/ei_sickness_cerb-fr.njk
+++ b/views/benefits/ei_sickness_cerb-fr.njk
@@ -1,6 +1,6 @@
 <div class="benefit" data-cy="ei_sickness_cerb-benefit">
 
-   <h2 class="benefit__header -mx-5 -mt-5 pl-5  text-2xl mb-6 p-4" id="ei_sickness_cerb">
+   <h2 class="benefit__header" id="ei_sickness_cerb">
     {{__("ei_sickness_cerb.header")}}
   </h2>
 
