--- a/views/benefits/ei_workshare-fr.njk
+++ b/views/benefits/ei_workshare-fr.njk
@@ -1,6 +1,6 @@
 <div class="benefit">
 
-   <h2 class="benefit__header -mx-5 -mt-5 pl-5  text-2xl mb-6 p-4" id="ei_workshare">
+   <h2 class="benefit__header" id="ei_workshare">
     {{__("ei_workshare.header")}}
   </h2>
 
