--- a/views/benefits/mortgage_deferral-fr.njk
+++ b/views/benefits/mortgage_deferral-fr.njk
@@ -1,6 +1,6 @@
 <div class="benefit">
 
-   <h2 class="benefit__header -mx-5 -mt-5 pl-5  text-2xl mb-6 p-4" id="mortgage_deferral">
+   <h2 class="benefit__header" id="mortgage_deferral">
     {{__("mortgage_deferral.header")}}
   </h2>
 
