--- a/views/benefits/oas-fr.njk
+++ b/views/benefits/oas-fr.njk
@@ -1,6 +1,6 @@
 <div class="benefit">
 
-   <h2 class="benefit__header -mx-5 -mt-5 pl-5  text-2xl mb-6 p-4" id="oas">
+   <h2 class="benefit__header" id="oas">
     {{__("oas.header")}}
   </h2>
 
