--- a/views/benefits/province-mb-fr.njk
+++ b/views/benefits/province-mb-fr.njk
@@ -1,6 +1,6 @@
 <div class="benefit">
 
-   <h2 class="benefit__header -mx-5 -mt-5 pl-5  text-2xl mb-6 p-4" id="province-mb">
+   <h2 class="benefit__header" id="province-mb">
     {{__("province-mb.header")}}
   </h2>
 
