--- a/views/benefits/province-nb-en.njk
+++ b/views/benefits/province-nb-en.njk
@@ -1,6 +1,6 @@
 <div class="benefit">
 
-   <h2 class="benefit__header -mx-5 -mt-5 pl-5  text-2xl mb-6 p-4" id="province-nb">
+   <h2 class="benefit__header" id="province-nb">
     {{__("province-nb.header")}}
   </h2>
 
