--- a/views/benefits/province-pe-en.njk
+++ b/views/benefits/province-pe-en.njk
@@ -1,6 +1,6 @@
 <div class="benefit">
 
-   <h2 class="benefit__header -mx-5 -mt-5 pl-5  text-2xl mb-6 p-4" id="province-pe">
+   <h2 class="benefit__header" id="province-pe">
     {{__("province-pe.header")}}
   </h2>
 
