--- a/views/benefits/student_financial_aid-fr.njk
+++ b/views/benefits/student_financial_aid-fr.njk
@@ -1,6 +1,6 @@
 <div class="benefit">
 
-   <h2 class="benefit__header -mx-5 -mt-5 pl-5  text-2xl mb-6 p-4" id="student_financial_aid">
+   <h2 class="benefit__header" id="student_financial_aid">
     {{__("student_financial_aid.header")}}
   </h2>
 
